Playing with EF Core

--- a/Services/NewsService/NewsService/appsettings.Development.json
+++ b/Services/NewsService/NewsService/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "NewsConnectionString": "Server=;Database=;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
