--- a/Services/NewsService/NewsService/appsettings.json
+++ b/Services/NewsService/NewsService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.AspNetCore.HttpLogging": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NewsConnectionString": "Server=;Database=;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
